--- a/catalog/view/theme/default/template/common/footer.twig
+++ b/catalog/view/theme/default/template/common/footer.twig
@@ -66,14 +66,14 @@
       </svg>
     </button>
     <div class="mobile-contacts-list has-background-white">
-      <a href="tel:{{ telephone }}">
+      <a href="tel:{{ tel_link }}" rel="nofollow">
         <span class="icon is-medium has-text-success">
           <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
           </svg>
         </span>
       </a>
-      <a href="mailto:{{ email }}">
+      <a href="mailto:{{ email }}" rel="nofollow">
         <span class="icon is-medium has-text-link">
           <svg xmlns="http://www.w3.org/2000/svg" width="1.5rem" height="1.5rem" fill="currentColor" class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
             <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0 11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482 4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z"/>
@@ -84,7 +84,7 @@
       {% if social_media %}
       {% for item in social_media %}
       {% if item.header %}
-      <a href="{{ item.url }}" target="_blank" class="{{ item.name }}">
+      <a href="{{ item.url }}" rel="nofollow" target="_blank" class="{{ item.name }}">
         <span class="icon is-medium">{{ item.icon|html_entity_decode }}</span>
       </a>
       {% endif %}
