--- a/catalog/view/theme/default/template/extension/captcha/basic.twig
+++ b/catalog/view/theme/default/template/extension/captcha/basic.twig
@@ -9,7 +9,7 @@
         </svg>
       </span>
     </button>
-    <img src="index.php?route=extension/captcha/basic/captcha" width="120px" height="40px" alt="{{ entry_captcha }}" />
+    <img src="index.php?route=extension/captcha/basic/captcha" width="120" height="40" alt="{{ entry_captcha }}" />
     <input type="text" name="captcha" id="input-payment-captcha" placeholder="{{ entry_captcha }}" class="input ml-3" autocomplete="off" />
   </div>
   {% if error_captcha %}
