--- a/catalog/view/theme/default/template/blog/article.twig
+++ b/catalog/view/theme/default/template/blog/article.twig
@@ -75,7 +75,7 @@
                 <div class="product-card box">
                   <div class="image">
                     <a href="{{ product.href }}" class="is-flex is-justify-content-center">
-                      <img src="{{ product.thumb }}" width="{{ image_width }}px" height="{{ image_height }}px" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
+                      <img src="{{ product.thumb }}" width="{{ image_width }}" height="{{ image_height }}" loading="lazy" alt="{{ product.name }}" title="{{ product.name }}" />
                       <span class="tag {{ product.quantity ? 'is-success' : 'is-danger' }} is-light stock">{{ product.stock }}</span>
                     </a>
                   </div>
@@ -152,7 +152,7 @@
                 <div class="box blog-card">
                   <div class="blog-image">
                     <a href="{{ article['href'] }}" class="has-text-centered image">
-                      <img src="{{ article['thumb'] }}" width="{{ image_width }}px" height="{{ image_height }}px" loading="lazy" alt="{{ article['name'] }}" title="{{ article['name'] }}" />
+                      <img src="{{ article['thumb'] }}" width="{{ image_width }}" height="{{ image_height }}" loading="lazy" alt="{{ article['name'] }}" title="{{ article['name'] }}" />
                     </a>
                   </div>
                   <div class="info">
