--- a/catalog/view/theme/default/template/blog/latest.twig
+++ b/catalog/view/theme/default/template/blog/latest.twig
@@ -37,7 +37,7 @@
             <div class="box blog-card">
               <div class="blog-image">
                 <a href="{{ article['href'] }}" class="has-text-centered image">
-                  <img src="{{ article['thumb'] }}" width="{{ image_width }}px" height="{{ image_height }}px" loading="lazy" alt="{{ article['name'] }}" title="{{ article['name'] }}" />
+                  <img src="{{ article['thumb'] }}" width="{{ image_width }}" height="{{ image_height }}" loading="lazy" alt="{{ article['name'] }}" title="{{ article['name'] }}" />
                 </a>
               </div>
               <div class="info">
