--- a/catalog/view/theme/default/template/common/header.twig
+++ b/catalog/view/theme/default/template/common/header.twig
@@ -59,11 +59,11 @@
                 {% if logo %}
                 {% if home == og_url %}
                 <span>
-                  <img src="{{ logo }}" width="{{ logo_width }}px"  height="{{ logo_height }}px" alt="{{ title }}">
+                  <img src="{{ logo }}" width="{{ logo_width }}"  height="{{ logo_height }}" alt="{{ title }}">
                 </span>
                 {% else %}
                 <a href="{{ home }}">
-                  <img src="{{ logo }}" width="{{ logo_width }}px"  height="{{ logo_height }}px" alt="{{ title }}">
+                  <img src="{{ logo }}" width="{{ logo_width }}"  height="{{ logo_height }}" alt="{{ title }}">
                 </a>
                 {% endif %}
                 {% else %}
@@ -94,7 +94,7 @@
                   </span>
                   <span class="has-text-weight-bold ">{{ email }}</span>
                 </a>
-                <a class="icon-text phone" href="tel:{{ telephone }}">
+                <a class="icon-text phone" rel="nofollow" href="tel:{{ tel_link }}">
                   <span class="icon has-text-primary">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M11 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h6zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
@@ -106,7 +106,7 @@
                 {% if social_media %}
                 {% for item in social_media %}
                 {% if item.header %}
-                <a href="{{ item.url }}" target="_blank" class="icon-text {{ item.name }} ml-4">
+                <a href="{{ item.url }}" rel="nofollow" target="_blank" class="icon-text {{ item.name }} ml-4">
                   <span class="icon">{{ item.icon|html_entity_decode }}</span>
                 </a>
                 {% endif %}
