--- a/catalog/view/theme/default/template/extension/module/anycategories.twig
+++ b/catalog/view/theme/default/template/extension/module/anycategories.twig
@@ -8,7 +8,7 @@
       <div class="column is-3-fullhd is-4-widescreen is-6-desktop is-6-tablet is-12-mobile">
         <a class="box" href="{{ category.href }}">
           <span class="image">
-            <img loading="lazy" height="{{ image_height }}px" width="{{ image_width }}px" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
+            <img loading="lazy" height="{{ image_height }}" width="{{ image_width }}" src="{{ category.thumb }}" alt="{{ category.name }}" title="{{ category.name }}" />
           </span>
           <span class="is-size-5-desktop is-size-5-tablet is-size-6-mobile is-block mt-5 has-text-link">{{ category.name }}</span>
         </a>
