--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -50,7 +50,7 @@
             </button>
             <div class="dropdown is-hoverable">
               <div class="dropdown-trigger">
-                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                <button class="button" aria-haspopup="true" aria-controls="dropdown-sort">
                   <span class="icon has-text-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M3.5 3.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 12.293V3.5zm4 .5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1h-1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1h-3zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1h-5zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5z"/>
@@ -67,7 +67,7 @@
                 <div class="dropdown-content">
                   {% for sorts in sorts %}
                   {% if sorts.value == '%s-%s'|format(sort, order) %}
-                  <a class="dropdown-item is-active" rel="nofollow">
+                  <a href="{{ sorts.href }}" class="dropdown-item is-active" rel="nofollow">
                     {{ sorts.text }}
                   </a>
                   {% else %}
@@ -81,7 +81,7 @@
             </div>
             <div class="dropdown is-hoverable">
               <div class="dropdown-trigger">
-                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                <button class="button" aria-haspopup="true" aria-controls="dropdown-show">
                   <span class="icon has-text-link">
                     <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                       <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
@@ -99,7 +99,7 @@
                 <div class="dropdown-content">
                   {% for limits in limits %}
                   {% if limits.value == limit %}
-                  <a class="dropdown-item is-active" rel="nofollow">
+                  <a href="{{ limits.href }}" class="dropdown-item is-active" rel="nofollow">
                     {{ limits.text }}
                   </a>
                   {% else %}
