--- a/catalog/view/theme/default/template/information/contact.twig
+++ b/catalog/view/theme/default/template/information/contact.twig
@@ -2,13 +2,17 @@
 <main id="information-contact">
   {{ content_top }}
   <div class="container">
-    <nav class="breadcrumb py-4" aria-label="breadcrumbs">
+    <nav class="breadcrumb py-4" aria-label="breadcrumbs" itemscope itemtype="https://schema.org/BreadcrumbList">
       <ul>
         {% for key, breadcrumb in breadcrumbs %}
         {% if key < (breadcrumbs|length - 1) %}
-        <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
+        <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+          <a href="{{ breadcrumb.href }}" itemprop="item">{{ breadcrumb.text }}</a>
+        </li>
         {% else %}
-        <li><span>{{ breadcrumb.text }}</span></li>
+        <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+          <span itemprop="item">{{ breadcrumb.text }}</span>
+        </li>
         {% endif %}
         {% endfor %}
       </ul>
@@ -27,7 +31,7 @@
           <div class="column is-12">
             <h1 class="title is-3">{{ heading_title }}</h1>
           </div>
-          <div class="column is-4-desktop is-6-tablet is-12-mobile">
+          <div class="column is-4-desktop is-6-tablet is-12-mobile" itemscope itemtype="https://schema.org/Organization">
             <div class="block">
               <p class="mb-5">
                 <span class="icon-text is-flew-wrap-nowrap">
@@ -36,7 +40,7 @@
                       <path d="M6.5 1A1.5 1.5 0 0 0 5 2.5V3H1.5A1.5 1.5 0 0 0 0 4.5v8A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 14.5 3H11v-.5A1.5 1.5 0 0 0 9.5 1h-3zm0 1h3a.5.5 0 0 1 .5.5V3H6v-.5a.5.5 0 0 1 .5-.5zm1.886 6.914L15 7.151V12.5a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5V7.15l6.614 1.764a1.5 1.5 0 0 0 .772 0zM1.5 4h13a.5.5 0 0 1 .5.5v1.616L8.129 7.948a.5.5 0 0 1-.258 0L1 6.116V4.5a.5.5 0 0 1 .5-.5z"/>
                     </svg>
                   </span>
-                  <span>{{ store }}</span>
+                  <span itemprop="name">{{ store }}</span>
                 </span>
               </p>
               {% if address %}
@@ -48,7 +52,7 @@
                       <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
                     </svg>
                   </span>
-                  <span>{{ address }}</span>
+                  <span itemprop="streetAddress">{{ address }}</span>
                 </span>
               </p>
               {% endif %}
@@ -74,7 +78,7 @@
                       <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.568 17.568 0 0 0 4.168 6.608 17.569 17.569 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.678.678 0 0 0-.58-.122l-2.19.547a1.745 1.745 0 0 1-1.657-.459L5.482 8.062a1.745 1.745 0 0 1-.46-1.657l.548-2.19a.678.678 0 0 0-.122-.58L3.654 1.328zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                     </svg>
                   </span>
-                  <span class="has-text-weight-bold">{{ telephone }}</span>
+                  <span class="has-text-weight-bold" itemprop="telephone">{{ telephone }}</span>
                 </span>
               </a>
               {% endif %}
