--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -28,7 +28,7 @@
       {% endif %}
       <div id="content" class="{{ class }}" itemscope itemtype="https://schema.org/Product">
         <h1 class="title is-3 has-text-weight-normal" id="heading" itemprop="name">{{ heading_title }}</h1>
-        <div class="tabs has-background-white">
+        <div class="tabs has-background-white mb-3">
           <ul>
             <li class="has-background-white is-active" data-target="#heading">
               <a>{{ tab_general }}</a>
@@ -54,7 +54,7 @@
           {% set class = 'column is-6-desktop is-12-tablet is-12-mobile' %}
           {% endif %}
           <div class="product-images {{ class }}">
-            <div id="product-images" class="swiper">
+            <div id="product-images" class="swiper box p-0 is-clipped  ">
               <div class="swiper-wrapper">
                 {% if thumb %}
                 <div class="swiper-slide">
