--- a/catalog/view/theme/default/template/blog/latest.twig
+++ b/catalog/view/theme/default/template/blog/latest.twig
@@ -33,7 +33,7 @@
         {% elseif column_left or column_right %}
         {% set class = 'column is-6-desktop is-12-tablet is-12-mobile' %}
         {% else %}
-        {% set class = 'column is-12' %}
+        {% set class = 'column is-4-desktop is-6-tablet is-12-mobile' %}
         {% endif %}
         <div class="columns is-mobile is-multiline mt-5 blog-cards">
           {% for article in articles %}
@@ -54,7 +54,7 @@
                         <path d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4zM11 7.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm-5 3a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5v-1z"/>
                       </svg>
                     </span>
-                    <span class="has-text-grey">{{ article.date_added }}</span>
+                    <span class="has-text-grey">{{ article.date_published }}</span>
                   </span>
                   <span class="icon-text ml-2">
                     <span class="icon has-text-primary">
