--- a/catalog/view/theme/default/template/common/menu.twig
+++ b/catalog/view/theme/default/template/common/menu.twig
@@ -5,7 +5,7 @@
         <div class="navbar-start">
           {% if categories %}
           <div class="navbar-item catalog-trigger">
-            <button class="button is-light is-primary pl-5 pr-4 is-flex is-aling-items-center">
+            <button class="button is-light is-primary pl-5 pr-4 is-flex is-aling-items-center is-fullwidth">
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
                   <path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5zM2.5 2a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zM1 10.5A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5zm6.5.5A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5zm1.5-.5a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z"/>
@@ -111,6 +111,12 @@
     <div class="modal-background"></div>
     <div class="modal-content box p-3 mt-3">
       <nav id="catalog">
+        <div class="is-flex is-justify-content-space-between is-align-items-center px-3 mb-3">
+          <div class="is-size-3 has-text-weight-bold">
+            {{ text_category }}
+          </div>
+          <button class="delete is-large is-dark" aria-label="close"></button>
+        </div>
         <div class="columns is-mobile is-multiline">
           {% for category in categories %}
           {% if category.children %}
@@ -144,8 +150,24 @@
           {% endfor %}
         </div>
       </nav>
-    </div>
-    <button class="delete is-large is-dark" aria-label="close"></button>
+    </div>    
   </div>
   {% endif %}
+
+  <script>
+  {% if categories %}
+    $('body').on('click', '.catalog-trigger, #catalog-modal .delete, #catalog-modal .modal-background', function (e) {
+
+      if ($(e.currentTarget).hasClass('modal-background') || $(e.currentTarget).hasClass('delete')) {
+        $('#catalog-modal').addClass('is-animated');
+
+        $('#catalog-modal .modal-background').one('animationend', function () {
+          $('#catalog-modal').removeClass('is-animated is-active');
+        });
+      } else {
+        $('#catalog-modal').addClass('is-active');
+      }
+    });
+  {% endif %}
+  </script>
 </section>
